# Automated-product-categorization-for-e-commerce-with-AI

./: .gitignore  Makefile  README.txt  alpha2_code_cleaning.ipynb  data_exploration 2 modelo.ipynb  data_exploration.ipynb  docker-compose-hub.yml  docker-compose.yml  encoding_alpha2 (2).ipynb  encoding_alpha3.ipynb  normalization.ipynb  normalization_vectorization_BERT.ipynb  run.bat
entregables/: doc_project.docx  final ADE.ipynb
infra/arangodb/: Makefile  check_connection.py  docker-compose.yml  pyproject.toml
infra/arangodb/migration/: Makefile  __init__.py  config.py  main.py  pyproject.toml
infra/arangodb/migration/core/: arangodb_provider.py  category_provider.py  db_provider.py  document_provider.py  manufacturer_provider.py  product_provider.py  type_provider.py
infra/nats/: Makefile  docker-compose.yml  nats_interaction.py  pyproject.toml
infra/prefect/: Makefile  connect.py  docker-compose.yml  flow.py  pyproject.toml
infra/qdrant/: Makefile  check_connection.py  docker-compose.yml  pyproject.toml
infra/scylladb/: .env  Dockerfile  docker-compose.yml  init-db.py  pyproject.toml
notebooks/: Description EDA.txt  complete_prediction.ipynb  data_exploration.ipynb  encoding_alpha_final_finetunning_final.ipynb  onehot_encoder_model_v1.joblib  part1-eda.ipynb  part2-normalization.ipynb  part3-encoder-scaler.ipynb  predict_model_1_and_2.ipynb  pyproject.toml  scaler.pkl  scaler_model_v1.joblib
notebooks/Bert Finetuning/: Readme Bert Finetuning.txt
notebooks/Bert Finetunning/: Bert_Finetunning.ipynb  Bert_Finetunning_Description.txt
notebooks/Jupyter_Notebooks_Model_1/: Model 1 General description.txt  complete_predictions.ipynb  encoding_alpha_final_model_1.ipynb
src/inference/: Dockerfile  Makefile  config.py  docker-compose.yml  main.py  pyproject.toml
src/inference/api/health/: router.py
src/inference/api/monitor/: consumer.py
src/inference/api/simulator/: consumer.py  model.py  router.py
src/inference/assets/encoder/: encoder.pkl  encoder_1.pkl  encoder_2.pkl  encoder_4.pkl
src/inference/assets/label_encoder/: label_encoder_2.h5  label_encoder_3.h5  label_encoder_4.h5
src/inference/assets/model/: encoder_3.pkl  encoding_alpha_final.ipynb  label_encoder_0.h5  label_encoder_1.h5
src/inference/core/: bert_model_provider.py  common_exception.py  encoder_model_provider.py  environment.py  eventbus.py  inference_service.py  inference_service_tunning.py  label_encoder_provider.py  logger_provider.py  model_ai_provider.py  normalization_provider.py  referemce.py  scaler_model_provider.py  setup.py  singleton.py  tensor_flow_provider.py
src/inference/domain/prediction/: consumer.py  producer.py
src/inference/tests/: call_health.http
src/webui/: .env  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  views_router.py
src/webui/api/category/: router.py
src/webui/api/health/: router.py
src/webui/api/manufacturer/: router.py
src/webui/api/monitor/: consumer.py
src/webui/api/product/: model.py  router.py  store.py
src/webui/api/product_type/: router.py
src/webui/api/simulator/: consumer.py  model.py  publisher.py  router.py
src/webui/api/type/: router.py
src/webui/core/: api_provider.py  arangodb_provider.py  common_exceptions.py  environment.py  eventbus.py  logger_provider.py  setup.py  views_router.py
src/webui/domain/product/: product_router.py
src/webui/tests/: manufacturer.http  predict_post.http  product_type_get.http  test_main.http  type_get.http
src/webui/ui/static/: package-lock.json  package.json  tailwind.config.js
src/webui/ui/static/css/: main.css  output.css
src/webui/ui/templates/: base.html  index.html
src/webui/ui/templates/pages/: bert-ft.html  monitor.html  product.html  simulator.html  simulator2.html  type.html
src/webui/ui/templates/partials/: _footer.html  _navbar.html
src/webui/ui/view/home/: router.py
src/webui/ui/view/monitor/: router.py
src/webui/ui/view/product/: router.py
src/webui/ui/view/simulator/: router.py
src/webui/ui/view/type/: router.py
