[tool.poetry]
name = "inference"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"
nats-py = "^2.7.2"
asyncio = "^3.4.3"
nltk = "^3.8.1"
pandas = "^2.2.1"
tensorflow = "^2.16.1"
transformers = "^4.38.2"
tf-keras = "^2.16.0"
scikit-learn = "^1.4.1.post1"
h5py = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
