[tool.poetry]
name = "webui"
version = "0.1.0"
description = ""
authors = ["rcastillo <tepuybits@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"
arango = "^0.2.1"
jinja2 = "^3.1.3"
nats-py = "^2.7.2"
websockets = "^12.0"
python-arango = "^7.9.1"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
